Fix songs aligning

--- a/app/pages/media/styles/AlbumPage.scss
+++ b/app/pages/media/styles/AlbumPage.scss
@@ -16,6 +16,10 @@ $albumPageImgSize: 32vh;
   padding-left: 2rem;
 }
 
+.songs {
+  margin-right: 2vw;
+}
+
 .SongCont {
   margin-top: 1rem;
 }
